add working pass/fail statement on the output, add content on html

--- a/form.html
+++ b/form.html
@@ -26,9 +26,12 @@
 	        <p><span id="outputDriving" ></span></p>
 	        <p><span id="outputWritten" ></span></p>
 	        <p><span id="outputResult"></span></p>
-				</section>
+				</section>	
 			</main>
-			<script type="text/javascript" src="dmvModel.js"></script>
+			<footer>
+				<button href="/index.html">Back to the main page</button>
+				<script type="text/javascript" src="dmvModel.js"></script>
+			</footer>
 		</body>
 	</html>
 
