--- a/about.html
+++ b/about.html
@@ -1,38 +1,26 @@
 <!DOCTYPE>
 	<html>
 		<head>
-			<title>Driver's License</title>
+			<title>About</title>
 			<link type="text/css" rel="stylesheet" href="style.css">
 		</head>
 		<body>
 			<header>
-				<h1>Welcome to Driver's License application website!</h1>
+				<h1>Driverslicense.com brings you the </h1>
 				<p>If you need a driver's license, this is the perfect website for you!</p>
 			</header>
 			<main>
-				<nav>
-					<button href="/form.html">Check if you're eligible</button>
-					<button href="/about.html">About</button>
-				</nav>
 				<h1>Eligibiliy</h1>
 				<p>In order to qualify for a driver's license, you need to be 18 years old or older. You also need to pass a driver's test and a written exam. </p>
 				<img src="https://farm4.staticflickr.com/3892/14790801915_a75d385e67.jpg">
 				<p>If you are a new applicant, please click the Continue button to check your eligibility!</p>
-				<button href="/form.html">Continue</button>
+				<button href="/index.html">Back to main bage</button>
 				<article>
 				</article>
 			</main>
 			<footer>
-				<h1>Contact</h1>
-				<ul>
-					<li>Driver's License Ltd.</li>
-					<li>Driver Road 76</li>
-					<li>Seattle, WA, 98100</li>
-				</ul>	
-				<ul>
-					<li>(206)555-555</li>
-					<li>info@driver.com</li>
-				</ul>
+				<h1></h1>
+				<p></p>
 			</footer>
 		
 		</body>
