--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		</head>
 		<body>
 			<header>
-				<h1>Welcome to Driver's License application website!</h1>
+				<h1>Welcome to this website!</h1>
 				<p>If you need a driver's license, this is the perfect website for you!</p>
 			</header>
 			<main>
@@ -14,12 +14,20 @@
 					<button href="/form.html">Check if you're eligible</button>
 					<button href="/about.html">About</button>
 				</nav>
-				<h1>Eligibiliy</h1>
-				<p>In order to qualify for a driver's license, you need to be 18 years old or older. You also need to pass a driver's test and a written exam. </p>
-				<img src="https://farm4.staticflickr.com/3892/14790801915_a75d385e67.jpg">
-				<p>If you are a new applicant, please click the Continue button to check your eligibility!</p>
-				<button href="/form.html">Continue</button>
 				<article>
+					<section>
+						<h1>Benefits for driving yourself</h1>
+						<img src="https://farm4.staticflickr.com/3892/14790801915_a75d385e67.jpg">
+						<p>It is commonly known in the modern world that using public transportation is not as bad for the environment than using a private car. However, the Scottish have found out that driving has some health benefits for your psyche!</p>
+						<cite>Epidemiological studies have consistently shown that car access is associated with longevity and better health. This study uses a mail survey of adults in Scotland to investigate the psychosocial benefits associated with public and private motor vehicle transportation. Results show that those with access to a car appear to gain more psychosocial benefits (protection, autonomy, prestige, self-esteem, mastery) from their habitual mode of transportation than do public transport users. Being a car driver conferred more benefits than being a passenger, except for self esteem, which was only associated with driving among men. Self-esteem was also associated with type of car among men but not women. One policy implication of these findings is that public transportation has to be made a more attractive, convenient and prestigious option which incorporates the benefits that people derive from travel by car (or that car access and use has to be made less psychosocially advantageous) in order to decrease car use and increase public transportation use.<!--http://www.worldtransitresearch.info/research/2065/ --></cite> 
+						<p>Based on the story, we can safely say that driving your own car has some serious health benefits for you, so go ahead and check if you're eligible for a license!</p>
+					</section>
+					<section>
+						<h1>Eligibiliy</h1>
+						<p>In order to qualify for a driver's license, you need to be 18 years old or older. You also need to pass a driving test and a knowledge test.</p>
+						<p>If you are a new applicant, please click the Continue button to check your eligibility!</p>
+						<button href="/form.html">Continue</button>
+					</section>
 				</article>
 			</main>
 			<footer>
@@ -34,6 +42,5 @@
 					<li>info@driver.com</li>
 				</ul>
 			</footer>
-		
 		</body>
 	</html>
