--- a/form.html
+++ b/form.html
@@ -12,19 +12,19 @@
 			<main>
 				<section>
 					<form>
-						<div>Name: <input placeholder="Your name" type="text" id="name" name="name" ></div>
-						<div>Age: <input placeholder="Your age" type="number" id="age" name="age" ></div>
-						<div>Driver's test score: <input placeholder="Your score" type="number" id="driver" name="drivertestscore"></div>
-			  	  <div>Written exam score: <input placeholder="Your score" type="number" id="written" name="writtentestscore"></div>
+						<div>Name: <input placeholder="Your name" type="text" role="textbox" id="name" name="name" ></div>
+						<div>Age: <input placeholder="Your age" type="number" role="textbox" id="age" name="age" ></div>
+						<div>Writing Exam score: <input placeholder="Your score" type="number" role="textbox"id="written" name="writtentestscore"></div>
+			  	  <div>Driving Exam score: <input placeholder="Your score" type="number" role="textbox"id="driver" name="drivertestscore"></div>
 					</form>
 					<button id="submit">Submit</button>
 				</section>
 				<section>
 					<h2>Your results:</h2>
-					<p><span id="outputName"</p>
+<!-- 					<p><span id="outputName"</p>
 	        <p><span id="outputAge"</p>
 	        <p><span id="outputDriving" ></span></p>
-	        <p><span id="outputWritten" ></span></p>
+	        <p><span id="outputWritten" ></span></p> -->
 	        <p><span id="outputResult"></span></p>
 				</section>
 			</main>
