--- a/new_page/form.html
+++ b/new_page/form.html
@@ -10,12 +10,12 @@
     <link href="styles/buttons.css" rel="stylesheet" type="text/css" media="screen"/>
 	</head>
 	<body>
+
 		<header>
 			<section class="container clearfix">    
 	        <a href="index.html" title="Return to Home" class="logo">
 	          <img src="images/logo.gif" alt="Logo" />
 	        </a>
-
 	        <nav>
 	          <ul>
 	            <li><a href="about.html">About</a></li>
@@ -25,6 +25,55 @@
 	        </nav>
 	      </section><!--- end container -->
 	  </header>
-		<h1>Form Goes Here</h1>
+
+	  <div id="content" class="container clearfix">
+		  <section class="lead-in">
+				<h1>Check Your Eligibility!</h1>
+				<p class="lead">Our Driver's License Check Tool was designed to assist you on whether or not you qualify for a <strong>Driver's License</strong>. Why drive to your local DMV location to ask an Operator for the requirements of a license when you can find in an instant using our tool!</p>
+				<p class="lead">For better results, we will assume that you have the following information:</p>
+				<ol class="lead">
+					<li>Your Full Name</li>
+					<li>Your Age</li>
+					<li>Your Knowledge Test Score</li>
+					<li>Your Driving Test Score</li>
+				</ol>
+				<p class="lead">If you have all this information, feel free to submit your results to receive instant feedback on your eligibility.</p>
+			</section>
+			<section>
+				<form>
+					<p class="lead">Full Name: <input type="text" placeholder="Full Name" id="name" class="form"></p>
+					<p class="lead">Age: <input type="text" placeholder="Your Age" id="age" class="form"></p>
+					<p class="lead">Knowledge Test Score: <input type="text" placeholder="Knowledge Score" id="written" class="form"></p>
+					<p class="lead">Driving Test Score: <input type="text" placeholder="Driving Score" id="driver" class="form"></p>
+				</form>
+				<button id="submit" class="btn btn-small">Submit</button>
+				<button class="clear btn btn-small">Clear</button>
+			</section>
+		</div>
+		
+		<section class="secondary-cta">
+      <section class="container clearfix">
+        <h4>Keep up to date with the latest news from our company</h4>
+        <form>
+          <input type="email" placeholder="Enter your email here" />
+          <input type="submit" class="btn btn-small" value="Sign Up" />
+        </form>
+      </section><!-- end container -->
+    </section><!-- end secondary call to action -->
+
+		<footer>
+			<section class="container clearfix">
+        <p id="copyright">Copyright &copy; 2015 C&amp;S Services</p>
+       	<nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="form.html">Services</a></li>
+          	<li><a href=" ">Contact</a></li>
+        	</ul>
+    		</nav>
+      </section><!-- end container -->
+		</footer><!-- footer ends here -->
+
 	</body>
 </html>
