added image to form

--- a/new_page/form.html
+++ b/new_page/form.html
@@ -27,8 +27,9 @@
 	  </header>
 
 	  <div id="content" class="container clearfix">
+	  	<img src="images/admission.jpg" class="status-img">
 		  <section class="lead-in">
-				<h1>Check Your Eligibility!</h1>
+				<h1>Eligibility Online Tool</h1>
 				<p class="lead">Our Driver's License Check Tool was designed to assist you on whether or not you qualify for a <strong>Driver's License</strong>. Why drive to your local DMV location to ask an Operator for the requirements of a license when you can find in an instant using our tool!</p>
 				<p class="lead">For better results, we will assume that you have the following information:</p>
 				<ol class="lead">
@@ -50,7 +51,7 @@
 				<button class="clear btn btn-small">Clear</button>
 			</section>
 		</div>
-		
+
 		<section class="secondary-cta">
       <section class="container clearfix">
         <h4>Keep up to date with the latest news from our company</h4>
