adding working JS script

--- a/new_page/form.html
+++ b/new_page/form.html
@@ -48,7 +48,11 @@
 					<p class="lead">Driving Test Score: <input type="text" placeholder="Driving Score" id="driver" class="form"></p>
 				</form>
 				<button id="submit" class="btn btn-small">Submit</button>
-				<button class="clear btn btn-small">Clear</button>
+				<button id="clear" class="clear btn btn-small">Clear</button>
+			</section>
+
+			<section>
+				<p id="outputResult">Results go Here</p>
 			</section>
 		</div>
 
@@ -75,6 +79,6 @@
     		</nav>
       </section><!-- end container -->
 		</footer><!-- footer ends here -->
-
+		<script type="text/javascript" src="new_demo_test.js"></script>
 	</body>
 </html>
