--- a/new_page/about.html
+++ b/new_page/about.html
@@ -34,21 +34,21 @@
 
 		    <section class="column four">
 		      <img src="images/servingyou.png" alt="A cute puppy looking into the camera" />
-		      <h4>What We Do</h4>
+		      <h3>What We Do</h3>
 		      <p>We provide DMV-related content and services in a user-friendly way that's simple-to-read and easy-to-understand.</p>
 		      <p>We want to make your life simpler. Renewing your car registration? No problem. Need a new <strong>driver's license</strong> for the first time or after you've moved? Piece of cake. No matter what you need or where you live, we can help you figure out what to do.</p>
 		    </section><!-- end column -->
 
         <section class="column four">
           <img src="images/whoweare.png" />
-          <h4>Who We Are</h4>
+          <h3>Who We Are</h3>
           <p>We're a privately-owned company composed of strategic doers, thinkers and writers, dedicated to making your experience with the DMV better than you thought possible.</p>
           <p>At C&amp;S Services, we know our success is dependent upon the collective abilities of every team member. Think of a symphony - as a listener, it may sound effortlessly beautiful, but in reality it is a product of the combined talents and efforts of each musician working together. At C&amp;S Services, we see our company as an art that we create daily with the unique skills and talents of every employee.</p>
     	  </section><!-- end column -->
 
         <section class="column four last">
           <img src="images/team.png" alt="A beautiful husky staring off into the sun" />
-          <h4>Our Culture</h4>
+          <h3>Our Culture</h3>
           <p>TDance parties. Weekly yoga. Lunches catered in with fresh, sustainably-sourced organic ingredients. A daily DJ to keep everyone in the groove.</p>
           <p>Does this sound like your typical office?</p>
           <p>That’s because it’s not. At DMV.org, we don’t believe that coming to work means leaving your personality behind. This is a place where you can be who you are, and do what you love.</p>
@@ -57,13 +57,13 @@
 
 	    <aside>
 	      <section class="widget">
-          <h4>Latest News</h4>
+          <h3>Latest News</h3>
           <h5>May 15, 2014</h5>
           <p>We have just come to find that the DMV office in Downtown Los Angeles has been experiencing more than the normal traffic. If you do not need to visit this location please avoid it at all costs. As of now, the average wait time to speak to a DMV Operator is 5 hours.</p>
 	      </section><!-- end widget -->
 
         <section class="widget socials">
-          <h4>Follow Us</h4>
+          <h3>Follow Us</h3>
           <a href="http://www.twitter.com" target="_blank">
               <img src="images/social_twitter.gif" alt="Follow us on Twitter" />
           </a>
@@ -77,9 +77,9 @@
 	    </aside><!-- end sidebar -->
 		</div><!-- end content -->
 
-		<section class="secondary-cta">
+		<section class="email-header">
       <section class="container clearfix">
-        <h4>Keep up to date with the latest news from our company</h4>
+        <h2>Keep up to date with the latest news from our company</h2>
 
         <form>
           <input type="email" placeholder="Enter your email here" />
