--- a/new_page/form.html
+++ b/new_page/form.html
@@ -51,14 +51,16 @@
 				<button id="clear" class="clear btn btn-small">Clear</button>
 			</section>
 
-			<section>
-				<p id="outputResult">Results go Here</p>
-			</section>
+			<aside>
+				<section class="widget results">
+					<p id="outputResult">Results go Here</p>
+				</section>
+			</aside>
 		</div>
 
-		<section class="secondary-cta">
+		<section class="email-header">
       <section class="container clearfix">
-        <h4>Keep up to date with the latest news from our company</h4>
+        <h2>Keep up to date with the latest news from our company</h2>
         <form>
           <input type="email" placeholder="Enter your email here" />
           <input type="submit" class="btn btn-small" value="Sign Up" />
