--- a/new_page/index.html
+++ b/new_page/index.html
@@ -24,19 +24,19 @@
           </ul>
         </nav>
       </section><!--- end container -->
-      <section class="hero">
+      <section class="main-header">
         <section class="container clearfix">
 
-          <section class="hero-title">
+          <section class="main-title">
             <h1>C&amp;S Services</h1>
             <h2>Where you're always first in line!</h2>
-            <section class="call-to-action">
+            <section class="do-i-qualify">
               <a href="form.html" class="btn btn-large">Do I Qualify?</a>
                   <!--  <a href="" class="btn btn-secondary">Secondary action</a> -->
             </section><!-- end call-to-action -->
           </section><!-- end hero-title -->
 
-          <img src="images/CarRent.png" alt="Blue Car" class="hero-image" />
+          <img src="images/CarRent.png" alt="Blue Car" class="car-image" />
         </section><!-- end container-->
       </section><!-- end hero -->
     </header><!-- end header -->
@@ -49,33 +49,33 @@
         </section><!-- end lead-in -->
         <section class="column four">
           <img src="images/puppy.jpg" alt="A cute puppy looking into the camera" />
-          <h4>A Cute Puppy</h4>
+          <h3>A Cute Puppy</h3>
           <p>This puppy is in our site not because it's related to this project, but because it's too cute to pass on! Puppies for EVERYONE!.</p>
         </section><!-- end column -->
 
         <section class="column four">
           <img src="images/seatbelt.png" alt="A crazy dog playing in the leaves" />
-          <h4>Safety Laws</h4>
+          <h3>Safety Laws</h3>
           <p>As of January 1, 2012, all children must ride in a car seat or booster seat until they are at least 8 years old or at least 4 feet 9 inches tall.</p>
           <p>In addition, all kids younger than 8 years old, must be secured in the back seat.</p>
         </section><!-- end column -->
 
         <section class="column four last">
           <img src="images/scooter.png" alt="A beautiful husky staring off into the sun" />
-          <h4>An Awesome Scooter</h4>
+          <h3>An Awesome Scooter</h3>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
         </section><!-- end column -->
       </section><!-- end column-content -->
 
       <aside>
         <section class="widget">
-          <h4>Latest News</h4>
+          <h3>Latest News</h3>
           <h5>May 15, 2014</h5>
           <p>We have just come to find that the DMV office in Downtown Los Angeles has been experiencing more than the normal traffic. If you do not need to visit this location please avoid it at all costs. As of now, the average wait time to speak to a DMV Operator is 5 hours.</p>
         </section><!-- end widget -->
 
         <section class="widget socials">
-          <h4>Follow Us</h4>
+          <h3>Follow Us</h3>
           <a href="http://www.twitter.com" target="_blank"><img src="images/social_twitter.gif" alt="Follow us on Twitter" /></a>
           <a href="http://www.facebook.com" target="_blank"><img src="images/social_facebook.gif" alt="Follow us on Facebook" /></a>
           <a href="http://www.youtube.com" target="_blank"><img src="images/social_youtube.gif" alt="Follow us on YouTube" /></a>
@@ -83,9 +83,9 @@
       </aside><!-- end sidebar -->
     </div><!-- end content -->
 
-    <section class="secondary-cta">
+    <section class="email-header">
       <section class="container clearfix">
-        <h4>Keep up to date with the latest news from our company</h4>
+        <h2>Keep up to date with the latest news from our company</h2>
         <form>
           <input type="email" placeholder="Enter your email here" />
           <input type="submit" class="btn btn-small" value="Sign Up" />
