add contact.html, add output on form.html, change html content

--- a/new_page/form.html
+++ b/new_page/form.html
@@ -2,15 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>C&amp;S Services</title>
-
+		<title>Check it</title>
 		<link href="styles/normalize.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="styles/base.css" rel="stylesheet" type="text/css" media="screen"/>
     <link href="styles/Style.css" rel="stylesheet" type="text/css" media="screen"/>
     <link href="styles/buttons.css" rel="stylesheet" type="text/css" media="screen"/>
 	</head>
 	<body>
-
 		<header>
 			<section class="container clearfix">    
 	        <a href="index.html" title="Return to Home" class="logo">
@@ -18,14 +16,14 @@
 	        </a>
 	        <nav>
 	          <ul>
+	          	<li><a href="index.html">Home</a></li>
 	            <li><a href="about.html">About</a></li>
-	            <li><a href=" ">Services</a></li>
-	            <li><a href=" ">Contact</a></li>
+	            <li><a href="form.html">Services</a></li>
+	            <li><a href="contact.html">Contact</a></li>
 	          </ul>
 	        </nav>
 	      </section><!--- end container -->
 	  </header>
-
 	  <div id="content" class="container clearfix">
 	  	<img src="images/admission.jpg" class="status-img">
 		  <section class="lead-in">
@@ -49,15 +47,13 @@
 				</form>
 				<button id="submit" class="btn btn-small">Submit</button>
 				<button id="clear" class="clear btn btn-small">Clear</button>
+        <a href="contact.html" class="btn btn-small">Contact us</a>
 			</section>
-
-			<aside>
-				<section class="widget results">
-					<p id="outputResult">Results go Here</p>
-				</section>
-			</aside>
+      <section>
+        <p class="summary lead"><span id="more"></span></p>
+				<p id="outputResult" class="summary lead">Results go here</p>
+			</section>
 		</div>
-
 		<section class="email-header">
       <section class="container clearfix">
         <h2>Keep up to date with the latest news from our company</h2>
@@ -67,7 +63,6 @@
         </form>
       </section><!-- end container -->
     </section><!-- end secondary call to action -->
-
 		<footer>
 			<section class="container clearfix">
         <p id="copyright">Copyright &copy; 2015 C&amp;S Services</p>
@@ -76,7 +71,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="form.html">Services</a></li>
-          	<li><a href=" ">Contact</a></li>
+          	<li><a href="contact.html">Contact</a></li>
         	</ul>
     		</nav>
       </section><!-- end container -->
