add email us button and requirements button

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 	          <ul>
               <li><a href="index.html">Home</a></li>
 	            <li><a href="about.html">About</a></li>
-	            <li><a href="index.html">Services</a></li>
+	            <li><a href="form.html">Services</a></li>
 	            <li><a href="contact.html">Contact</a></li>
 	          </ul>
 	        </nav>
@@ -31,6 +31,9 @@
 			<h2 class="lead">Contact Information</h2>
 			<p class="lead">C&amp;S Services<br>26480 Driver Road NE<br>Seattle, WA, 98100</p>
       <p class="lead">(206) 555-555<br>info@cs-services.com</p>
+      <form action="mailto:info@cs-services.com">
+        <input type="submit" class="btn btn-small" value="Email Us"/>
+      </form>
 		</section>
 		<section class="email-header">
       <section class="container clearfix">
