--- a/form.html
+++ b/form.html
@@ -47,11 +47,15 @@
 				</form>
 				<button id="submit" class="btn btn-small">Submit</button>
 				<button id="clear" class="clear btn btn-small">Clear</button>
-        <a href="contact.html" class="btn btn-small">Contact us</a>
+        <button id="requirements" class="clear btn btn-small">Requirements</button>
 			</section>
       <section>
         <p class="summary lead"><span id="more"></span></p>
 				<p id="outputResult" class="summary lead">Results go here</p>
+        <form method="get" action="contact.html">
+          <button type="submit" class="clear btn btn-small">Contact Us</button>
+        </form>
+        <p class="summary lead"><span id="outputRequirements"></span></p>
 			</section>
 		</div>
 		<section class="email-header">
