--- a/form.html
+++ b/form.html
@@ -30,6 +30,7 @@
 				<h1>Eligibility Online Tool</h1>
 				<p class="lead">Our Driver's License Check Tool was designed to assist you on whether or not you qualify for a <strong>Driver's License</strong>. Why drive to your local DMV location to ask an Operator for the requirements of a license when you can find in an instant using our tool!</p>
 				<p class="lead">For better results, we will assume that you have the following information:</p>
+				<img src="images/lisence.gif"class="car-image">
 				<ol class="lead">
 					<li>Your Full Name</li>
 					<li>Your Age</li>
