--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
           <input type="submit" class="btn btn-small" value="Sign Up" />
         </form>
       </section><!-- end container -->
-    </section><!-- end secondary call to action -->
+    </section><!-- end email-header -->
 		<footer>
 			<section class="container clearfix">
         <p id="copyright">Copyright &copy; 2015 C&amp;S Services</p>
@@ -60,3 +60,4 @@
 		<script type="text/javascript" src="new_demo_test.js"></script>
 	</body>
 </html>
+
