--- a/form.html
+++ b/form.html
@@ -50,12 +50,13 @@
 				<button id="clear" class="clear btn btn-small">Clear</button>
         <button id="requirements" class="clear btn btn-small">Requirements</button>
 			</section>
+			<p></p>
+			<form method="get" action="contact.html">
+       	<button type="submit" class="clear btn btn-small">Contact Us</button>
+      </form><!-- Contact Us button -->
       <section>
         <p class="summary lead"><span id="more"></span></p>
-				<p id="outputResult" class="summary lead">Results go here</p>
-        <form method="get" action="contact.html">
-          <button type="submit" class="clear btn btn-small">Contact Us</button>
-        </form>
+				<p id="outputResult" class="summary lead"></p><!-- display results -->
         <p class="summary lead"><span id="outputRequirements"></span></p>
 			</section>
 		</div>
@@ -67,7 +68,7 @@
           <input type="submit" class="btn btn-small" value="Sign Up" />
         </form>
       </section><!-- end container -->
-    </section><!-- end secondary call to action -->
+    </section><!-- end email-header -->
 		<footer>
 			<section class="container clearfix">
         <p id="copyright">Copyright &copy; 2015 C&amp;S Services</p>
@@ -84,3 +85,4 @@
 		<script type="text/javascript" src="new_demo_test.js"></script>
 	</body>
 </html>
+
