removed unwanted lines

--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
               <a href="form.html" class="btn btn-large">Do I Qualify?</a>
             </section><!-- end do-i-qualify -->
           </section><!-- end main-title -->
-<<<<<<< HEAD:index.html
-=======
-
->>>>>>> origin/new_claudiac:new_page/index.html
-          <img src="images/CarRent.png" alt="Blue Car" class="car-image" />
+          <img src="images/CarRent.png" alt="Blue Car" class="car-image" >
         </section><!-- end container-->
       </section><!-- end main-header -->
     </header><!-- end header -->
@@ -86,10 +82,6 @@
         </form>
       </section><!-- end container -->
     </section><!-- end email-header -->
-<<<<<<< HEAD:index.html
-=======
-
->>>>>>> origin/new_claudiac:new_page/index.html
     <footer>
       <section class="container clearfix">
         <p id="copyright">Copyright &copy; 2015 C&amp;S Services</p>
